--- a/pdf-tools.html
+++ b/pdf-tools.html
@@ -40,6 +40,169 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "url": "https://www.alltoolai.com/pdf-tools",
+    "name": "Free Online PDF Tools | Merge, Split, Convert, Secure",
+    "description": "Use All Tool AI’s free PDF tools to merge, split, convert, rotate, extract, encrypt, and manage your PDFs securely online. 100% free and confidential.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/pdf-tools",
+    "name": "Free Online PDF Tools | All Tool AI",
+    "headline": "Free Online PDF Tools – Merge, Split, Convert, Compress, Rotate, and Secure PDFs",
+    "description": "All Tool AI provides free and secure online PDF tools to merge, split, convert, compress, rotate, and protect your PDF files with AI precision — no installation or signup required.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://www.alltoolai.com/assets/logo.png"
+    },
+    "sameAs": [
+      "https://www.facebook.com/alltoolai",
+      "https://twitter.com/alltoolai",
+      "https://www.linkedin.com/company/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/pdf-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/pdf-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Pdf Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 15,
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Text to PDF", "url": "https://www.alltoolai.com/text-to-pdf" },
+      { "@type": "ListItem", "position": 2, "name": "Images to PDF", "url": "https://www.alltoolai.com/images-to-pdf" },
+      { "@type": "ListItem", "position": 3, "name": "PDF to JPG", "url": "https://www.alltoolai.com/pdf-to-jpg" },
+      { "@type": "ListItem", "position": 4, "name": "PDF to PNG", "url": "https://www.alltoolai.com/pdf-to-png" },
+      { "@type": "ListItem", "position": 5, "name": "Merge PDF", "url": "https://www.alltoolai.com/merge-pdf" },
+      { "@type": "ListItem", "position": 6, "name": "Resize/Compress PDF", "url": "https://www.alltoolai.com/resize-pdf" },
+      { "@type": "ListItem", "position": 7, "name": "Rotate PDF Pages", "url": "https://www.alltoolai.com/rotate-pdf-pages" },
+      { "@type": "ListItem", "position": 8, "name": "Rearrange PDF Pages", "url": "https://www.alltoolai.com/rearrange-pdf-pages" },
+      { "@type": "ListItem", "position": 9, "name": "PDF Extractor", "url": "https://www.alltoolai.com/pdf-extractor" },
+      { "@type": "ListItem", "position": 10, "name": "PDF Split", "url": "https://www.alltoolai.com/pdf-split" },
+      { "@type": "ListItem", "position": 11, "name": "PDF Pages Delete", "url": "https://www.alltoolai.com/pdf-pages-delete" },
+      { "@type": "ListItem", "position": 12, "name": "Add PDF Page Numbers", "url": "https://www.alltoolai.com/add-pdf-page-numbers" },
+      { "@type": "ListItem", "position": 13, "name": "Watermark to PDF", "url": "https://www.alltoolai.com/watermark-pdf" },
+      { "@type": "ListItem", "position": 14, "name": "PDF Encrypt", "url": "https://www.alltoolai.com/pdf-encrypt" },
+      { "@type": "ListItem", "position": 15, "name": "PDF Decrypt", "url": "https://www.alltoolai.com/pdf-decrypt" }      
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Are the PDF tools free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. All Tool AI’s PDF tools are 100% free, unlimited, and require no signup."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my information private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. Your files are processed securely, and no personal data or content is stored."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need to sign up or install anything?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. All tools run in your browser — no account, download, or installation required."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which PDF tools are included?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Merge PDF, Split PDF, Resize/Compress PDF, Text to PDF, Images to PDF, PDF to JPG/PNG, Rotate PDF Pages, Rearrange PDF Pages, Extract/Delete pages, Add Page Numbers, Watermark, Encrypt/Decrypt."
+        }
+      }
+    ]
+  }
+  </script>
+  
   <!-- Non-blocking load for Google Fonts stylesheet -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" media="print" onload="this.media='all'" />
