--- a/qr-generator-tools.html
+++ b/qr-generator-tools.html
@@ -33,6 +33,172 @@
   <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/qr-generator-tools" />
   <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/qr-generator-tools" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.alltoolai.com/",
+    "name": "All Tool AI",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.alltoolai.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Free QR Code Generator Tools",
+    "url": "https://www.alltoolai.com/qr-generator-tools",
+    "description": "Top, fast, and best in class free QR tools to create and scan Wi-Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location, Zoom, and Skype QR codes securely and unlimited.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "url": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "CollectionPage",
+    "url": "https://www.alltoolai.com/qr-generator-tools",
+    "name": "Free Online QR Code Generator Tools | All Tool AI",
+    "headline": "Free Online QR Code Generator Tools – Create & Scan Wi-Fi, URL, Text, Email, and More",
+    "description": "All-in-one free QR code generator and scanner tools to create and scan Wi-Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location, Zoom, and Skype QR codes securely and unlimited.",
+    "inLanguage": "en",
+    "isPartOf": {
+      "@type": "WebSite",
+      "@id": "https://www.alltoolai.com/"
+    }
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "All Tool AI",
+    "url": "https://www.alltoolai.com/",
+    "logo": "https://www.alltoolai.com/logo.png",
+    "sameAs": [
+      "https://www.facebook.com/alltoolai",
+      "https://twitter.com/alltoolai"
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Offer",
+    "url": "https://www.alltoolai.com/qr-generator-tools",
+    "priceCurrency": "USD",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition",
+    "seller": {
+      "@type": "Organization",
+      "name": "All Tool AI",
+      "url": "https://www.alltoolai.com/"
+    },
+    "description": "Lifetime free access to All Tool AI’s full suite of AI-powered tools — no registration or payment required."
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://www.alltoolai.com/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "PDF Tools",
+        "item": "https://www.alltoolai.com/qr-generator-tools"
+      }
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "Qr Generator Tools List",
+    "itemListOrder": "Ascending",
+    "numberOfItems": 14,
+    "itemListElement": [
+      {"@type":"ListItem","position":1,"name":"QR Code Scanner","url":"https://www.alltoolai.com/qr-code-scanner"},
+      {"@type":"ListItem","position":2,"name":"Wi‑Fi QR Code Generator","url":"https://www.alltoolai.com/wifi-qr-code-generator"},
+      {"@type":"ListItem","position":3,"name":"Text QR Code Generator","url":"https://www.alltoolai.com/text-qr-code-generator"},
+      {"@type":"ListItem","position":4,"name":"URL/Link QR Code Generator","url":"https://www.alltoolai.com/url-qr-code-generator"},
+      {"@type":"ListItem","position":5,"name":"Email QR Code Generator","url":"https://www.alltoolai.com/email-qr-code-generator"},
+      {"@type":"ListItem","position":6,"name":"Phone Number QR Code Generator","url":"https://www.alltoolai.com/phone-qr-code-generator"},
+      {"@type":"ListItem","position":7,"name":"SMS QR Code Generator","url":"https://www.alltoolai.com/sms-qr-code-generator"},
+      {"@type":"ListItem","position":8,"name":"WhatsApp QR Code Generator","url":"https://www.alltoolai.com/whatsapp-qr-code-generator"},
+      {"@type":"ListItem","position":9,"name":"Zoom QR Code Generator","url":"https://www.alltoolai.com/zoom-qr-code-generator"},
+      {"@type":"ListItem","position":10,"name":"Skype QR Code Generator","url":"https://www.alltoolai.com/skype-qr-code-generator"},
+      {"@type":"ListItem","position":11,"name":"vCard QR Code Generator","url":"https://www.alltoolai.com/vcard-qr-code-generator"},
+      {"@type":"ListItem","position":12,"name":"Event QR Code Generator","url":"https://www.alltoolai.com/event-qr-code-generator"},
+      {"@type":"ListItem","position":13,"name":"Bitcoin QR Code Generator","url":"https://www.alltoolai.com/bitcoin-qr-code-generator"},
+      {"@type":"ListItem","position":14,"name":"Location QR Code Generator","url":"https://www.alltoolai.com/location-qr-code-generator"}   
+    ]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Are these QR tools free and unlimited?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. 100% free, no signup, and lifetime unlimited use."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is my data private and secure?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. We do not store your personal QR data or scan results. Your information is confidential and processed securely."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Which QR types can I create?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Wi-Fi, URL, Text, Email, Phone, SMS, WhatsApp, vCard, Event, Bitcoin, Location (maps), Zoom, and Skype."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do QR codes expire?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Static QR codes created here do not expire. Download and reuse anytime."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do these tools work on mobile?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Absolutely. All tools work smoothly on phones, tablets, and desktops."
+        }
+      }
+    ]
+  }
+  </script>
+
   <!-- FAVICON -->
   <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
